<resources>
    <string name="app_name">Leccion02</string>
    <string name="txt_name">JoseLuisGS</string>
    <string name="yellow_star">Yellow star</string>
    <string name="txt_bio">Hi, my name is JoseLuisGS.
        \n\nI love Bla bla bla bla bla bla.
        \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
        \nFun fact is that I have several aquariums and also a river.
        \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
        \nAnd sometimes I even go fishing.
        \nAnd even less sometimes, I actually catch something.
        \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
        \n\nI\'ll be happy to teach you how to make your own aquarium.
        \nYou should ask someone else about fishing, though.\n\n
    </string>
    <string name="edit_text_nickname">Name</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="bt_done">Done</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>