<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConstraintActivity" android:id="@+id/lyConstraintRoot">

    <TextView
            android:text="@string/box_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/txBoxOne"
            style="@style/whiteBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/txBoxTwo"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txBoxOne" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/txBoxThree"
            style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/txBoxFour"
            app:layout_constraintTop_toTopOf="@+id/txBoxTwo"
            android:layout_marginTop="0dp" app:layout_constraintStart_toEndOf="@+id/txBoxTwo"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/txBoxFour"
            style="@style/whiteBox"
            app:layout_constraintTop_toBottomOf="@+id/txBoxThree"
            app:layout_constraintBottom_toTopOf="@+id/txBoxFive" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/txBoxTwo" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/txBoxFive"
            style="@style/whiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/txBoxTwo"
            app:layout_constraintTop_toBottomOf="@+id/txBoxFour"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/txBoxTwo"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txPlay"
            tools:layout_editor_absoluteX="27dp" android:fontFamily="@font/roboto" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txBoxTwo" tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/tap_the_boxes_and_buttons"
            android:id="@+id/textView2" tools:layout_editor_absoluteY="219dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            app:layout_constraintStart_toEndOf="@+id/txPlay" tools:ignore="MissingConstraints"/>
    <Button
            android:text="@string/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btRed" tools:layout_editor_absoluteY="563dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btYellow" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btYellow"
            app:layout_constraintStart_toEndOf="@+id/btRed"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btGreen"
            android:layout_marginTop="221dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:flow_verticalBias="1.0"/>
    <Button
            android:text="@string/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btGreen" tools:layout_editor_absoluteY="563dp"
            app:layout_constraintStart_toEndOf="@+id/btYellow" app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>